Updating package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "umimood/dearapi",
+    "name": "eighteen73/dear-api",
     "description": "PHP Library for dear systems API v2 https://dearinventory.docs.apiary.io",
     "type": "library",
     "license": "MIT",
