--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,8 @@
     "prefer-stable": true,
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
