--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit bootstrap = "vendor/autoload.php"
-         backupGlobals               = "false">
-         <!--backupStaticAttributes      = "false"-->
-         <!--colors                      = "true"-->
-         <!--convertErrorsToExceptions   = "true"-->
-         <!--convertNoticesToExceptions  = "true"-->
-         <!--convertWarningsToExceptions = "true"-->
-         <!--processIsolation            = "false"-->
-         <!--stopOnFailure               = "false"-->
-         <!--syntaxCheck                 = "false"-->
-
-    <testsuites>
-        <testsuite name="Dear API Test Suite">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-
-    <filter>
-        <whitelist>
-            <directory suffix=".php">src/</directory>
-        </whitelist>
-    </filter>
-
-    <php>
-        <env name="DEAR_ACCOUNT_ID" value="DEAR-ACCOUNT_ID"/>
-        <env name="DEAR_APPLICATION_KEY" value="DEAR-APPLICATION-KEY"/>
-    </php>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" backupGlobals="false" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage>
+    <include>
+      <directory suffix=".php">src/</directory>
+    </include>
+  </coverage>
+  <!--backupStaticAttributes      = "false"-->
+  <!--colors                      = "true"-->
+  <!--convertErrorsToExceptions   = "true"-->
+  <!--convertNoticesToExceptions  = "true"-->
+  <!--convertWarningsToExceptions = "true"-->
+  <!--processIsolation            = "false"-->
+  <!--stopOnFailure               = "false"-->
+  <!--syntaxCheck                 = "false"-->
+  <testsuites>
+    <testsuite name="Dear API Test Suite">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
+  <php>
+    <env name="DEAR_ACCOUNT_ID" value="DEAR-ACCOUNT_ID"/>
+    <env name="DEAR_APPLICATION_KEY" value="DEAR-APPLICATION-KEY"/>
+  </php>
 </phpunit>
